objects/Age_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Age Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Zip__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Age Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>